Fix text in spanish translation

--- a/config/locales/es.yml
+++ b/config/locales/es.yml
@@ -170,7 +170,7 @@ es: #new start
       link: '¿Cómo funciona?'
       title: '¿Cómo funciona?'
       content: "<p>Una vez realizada la Encuesta, sus puntos de vista se podrán visualizar sobre un gráfico compuesto de tres ejes: ‘conservación centrada en las personas’ (sobre el papel que las personas deben tener en la conservación), ‘ecocentrismo científico’ (sobre el papel de la ciencia en la protección de las especies y ecosistemas), y ‘conservación a través del capitalismo’ (el papel de las corporaciones y las herramientas de mercado en la conservación). Dichos ejes fueron derivados a partir del análisis estadístico de los primeros 9.264 participantes en la Encuesta (estos análisis, y los acompañantes resultados, se detallan <a href='https://www.nature.com/articles/s41893-019-0267-5' title='en un artículo en Nature Sustainability' target='_blank'>en un artículo en Nature Sustainability</a> el <a href='https://wordpress.com/post/thinkinglikeahuman.com/458' title='artículo aceptado para su publicación' target='_blank'>artículo aceptado para su publicación</a> es de acceso libre).</p>
-      <p>Hemos publicado, seguimos trabajando para publicar, diversos artículos sobre los puntos de vista de los conservacionistas. Dentro de lo posible, incluiremos dichas publicaciones en esta página web.</p>"
+      <p>Hemos publicado, y seguimos trabajando para publicar, diversos artículos sobre los puntos de vista de los conservacionistas. Dentro de lo posible, incluiremos dichas publicaciones en esta página web.</p>"
     -
       link: 'Sobre el equipo'
       title: 'Sobre el equipo'
