Update hyperlink for the client

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -182,7 +182,7 @@ en:
       <li><a href="http://www.geog.cam.ac.uk/people/sandbrook/" title="Visit the profile of Chris Sandbrook">Chris Sandbrook (University of Cambridge)</a></li>
       <li><a href="http://www.see.leeds.ac.uk/people/g.holmes" title="Visit the profile of George Holmes">George Holmes (University of Leeds)</a></li>
       <li><a href="http://www.geos.ed.ac.uk/homes/jfisher2/">Janet Fisher (University of Edinburgh)</a></li>
-      <li>Rogelio Luque-Lora (University of Cambridge)</li>
+      <li><a href="https://www.geog.cam.ac.uk/people/luque-lora/">Rogelio Luque-Lora (University of Cambridge)</a></li>
       <li><a href="https://www.ed.ac.uk/geosciences/people?indv=4057" title="Visit the profile of Aidan Keane">Aidan Keane (University of Edinburgh)</a></li>
       </ul>
       The website is hosted by the <a href="https://www.unep-wcmc.org" title="Visit the UN Environment World Conservation Monitoring Centre website">UN Environment World Conservation Monitoring Centre.</a><p>'
