--- a/config/locales/es.yml
+++ b/config/locales/es.yml
@@ -180,7 +180,7 @@ es: #new start
       <li><a href='http://www.geog.cam.ac.uk/people/sandbrook/' title='Visit the profile of Chris Sandbrook'>Chris Sandbrook (University of Cambridge)</a></li>
       <li><a href='http://www.see.leeds.ac.uk/people/g.holmes' title='Visit the profile of George Holmes'>George Holmes (University of Leeds)</a></li>
       <li><a href='http://www.geos.ed.ac.uk/homes/jfisher2/'>Janet Fisher (University of Edinburgh)</a></li>
-      <li>Rogelio Luque-Lora (University of Cambridge)</li>
+      <li><a href='https://www.geog.cam.ac.uk/people/luque-lora/'>Rogelio Luque-Lora (University of Cambridge)</a></li>
       <li><a href='https://www.ed.ac.uk/geosciences/people?indv=4057' title='Visit the profile of Aidan Keane'>Aidan Keane (University of Edinburgh)</a></li>
       </ul>
       La página web se encuentra bajo los auspicios del <a href='https://www.unep-wcmc.org' title='UN Environment World Conservation Monitoring Centre'>UN Environment World Conservation Monitoring Centre.</a><p>"
