Text fix in french translation

--- a/config/locales/fr.yml
+++ b/config/locales/fr.yml
@@ -135,7 +135,7 @@ fr:
       title: Participez aux débats sur le futur de la conservation
       tagline: Donnez vos opinions sur divers enjeux liés à la conservation, comparez vos opinions à celles des autres et donnez votre avis afin de façonner les débats futurs.
     intro:
-      title: 'le Future avec la Conservation frances'
+      title: 'Le Futur de la Conservation'
       content: '<p>Bien que des débats concernant les directions futures de la conservation de la biodiversité aient eu lieu depuis longtemps, ceux-ci ont eu tendance à être dominés par quelques personnalités importantes. </p>
       <p>Cette enquête vous permet d’y apporter votre propre opinion, afin qu’une plus grande diversité de points de vue soit exprimée. L’enquête ne vous prendra que 15 minutes. À la fin, vos opinions et leur comparaison avec celles des autres participants vous seront présentées graphiquement. </p>
       <p>Nous espérons que vous apprécierez cette enquête et nous vous encourageons à partager votre expérience en suggérant à d’autres d’y participer! </p>'
