Fix typo in french translation yml

--- a/config/locales/fr.yml
+++ b/config/locales/fr.yml
@@ -99,7 +99,7 @@ fr:
   nav:
     about_project: À propos du projet
     about_debate: À propos du débat
-    about_gofox:  À propos de Go-Fox-FOX
+    about_gofox:  À propos de GO-FOX
     log_in: S’identifier
     home: Accueil
 
