Add spanish translation for get results

--- a/config/locales/es.yml
+++ b/config/locales/es.yml
@@ -91,7 +91,7 @@ es: #new start
 
   buttons:
     accept: Aceptar
-    get_results: Enviar
+    get_results: Ver mis resultados
     next: Siguiente
     previous: Anterior
     take_survey: Participe en la encuesta
