--- a/config/locales/pt.yml
+++ b/config/locales/pt.yml
@@ -143,7 +143,7 @@ pt:
       ethics_statement: 'Your responses will be kept anonymous, stored securely and will only be used for this project. See full details of <a title="About the Project" href="/about-the-project">ethics and data security</a>.'
     blocks:
       -
-        title: 'Group and Organisation Future of Conservation Survey (GO-FOX)'
+        title: 'A Pesquisa O Futuro da Conservação para Grupos e Organizações (GO-FOX)'
         description: '
         <p>In response to demand, we have now launched a tool which allows you to create your own unique version of the Future of Conservation Survey and distribute it to a closed group of respondents you are working with. Analysed survey results from this group are then made available to you, to use for the benefit of the group.  This can be used, for instance, to facilitate strategic planning within organisations, or to support teaching on contemporary conservation debates. Visit the <a href="/about-go-fox" title="Visit the About Go-FOX page">About GO-FOX page</a> for more details, or <a href="/users/sign_in?locale=en" title="Register now">register now</a> and start creating surveys!</p>
         <p>Already a GO-FOX user? <a href="/users/sign_in" title="Log in to GO-FOX">Log in to your account here</a>.</p>'
