--- a/config/locales/pt.yml
+++ b/config/locales/pt.yml
@@ -145,8 +145,8 @@ pt:
       -
         title: 'A Pesquisa O Futuro da Conservação para Grupos e Organizações (GO-FOX)'
         description: '
-        <p>In response to demand, we have now launched a tool which allows you to create your own unique version of the Future of Conservation Survey and distribute it to a closed group of respondents you are working with. Analysed survey results from this group are then made available to you, to use for the benefit of the group.  This can be used, for instance, to facilitate strategic planning within organisations, or to support teaching on contemporary conservation debates. Visit the <a href="/about-go-fox" title="Visit the About Go-FOX page">About GO-FOX page</a> for more details, or <a href="/users/sign_in?locale=en" title="Register now">register now</a> and start creating surveys!</p>
-        <p>Already a GO-FOX user? <a href="/users/sign_in" title="Log in to GO-FOX">Log in to your account here</a>.</p>'
+        Em resposta à uma demanda manifestada por diversas pessoas e organizações de todo o mundo, desenvolvemos uma ferramenta online que permite a criação e disseminação de uma versão personalizada da Pesquisa do Futuro da Conservação dentro de um grupo fechado de participantes (por exemplo, colegas de trabalho ou alunos). Os resultados analisados ficam à disposição para uso e benefício do grupo. Assim, podem ser utilizados para, por exemplo, facilitar debates internos sobre os objetivos de organizações que atuam no campo da conservação ou como uma ferramenta de ensino nas universidades. Visite a <a href="/about-go-fox" title="página Sobre GO-FOX">página Sobre GO-FOX</a> para descobrir mais sobre a ferramenta, ou <a href="/users/sign_in?locale=en" title="cadastre-se agora">cadastre-se agora</a> e comece a criar pesquisas customizadas!</p>
+        <p>Se você já tem cadastro na GO-FOX, <a href="/users/sign_in" title="acessa sua conta aqui">acessa sua conta aqui</a>.</p>'
         image: 'logos/logo-gofox.svg'
         image_alt: 'GO-FOX logo'
         image_class: 'gofox'
