--- a/config/locales/pt.yml
+++ b/config/locales/pt.yml
@@ -136,7 +136,7 @@ pt:
       title: Contribua para o debate sobre o futuro da conservação
       tagline: Dê a sua opinião sobre conservação em uma série de questões, veja como você se compara aos outros participantes e contribua com seus pontos de vista na construção de futuros debates.
     intro:
-      title: 'The Future of Conservation Survey'
+      title: 'O Futuro da Conservação'
       content: '<p>Há muito tempo tem havido debates sobre o caminho que a conservação da biodiversidade deve seguir. No entanto, estes debates têm sido dominados por poucos e poderosos indivíduos.</p>
       <p>Esta pesquisa permite que você contribua com seus pontos de vista, de modo que uma ampla gama de vozes possa ser levada em conta. A pesquisa leva apenas 15 minutos para ser concluída, e no final será apresentada uma representação gráfica de seus pontos de vista e como se comparam em relação aos de outras pessoas que realizaram a pesquisa.</p>
       <p>Esperamos que você curta participar da pesquisa, e encorajamos você a compartilhar sua experiência e incentivar outras pessoas a participarem também!</p>'
